# x308-headunit

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md
config/: config.example.toml  config.toml
config/polkit-1/rules.d/: 49-x308-bluealsa-aplay.rules
config/sudoers.d/: x308-bluealsa-aplay
deploy/sudoers/: x308-audio
docs/: ARCHITECTURE.md  BLUEALSA_APLAY_AUTHORIZATION.md  BLUETOOTH_RUNTIME.md  MANUAL_TESTS.md  system-audit.md
include/x308/: App.hpp  AppContext.hpp  BluetoothCtlManager.hpp  BluetoothStartupConnector.hpp  BluezDbusMediaController.hpp  Cli.hpp  Configuration.hpp  HardwareStubs.hpp  InteractiveMenu.hpp  Interfaces.hpp  LinuxAudioOutputController.hpp  Logger.hpp  Models.hpp  MpdClient.hpp  PlaybackSourceMonitor.hpp  ProcessRunner.hpp  SourceManager.hpp  SystemStatusPresenter.hpp  SystemStatusReport.hpp  SystemStatusService.hpp
scripts/: check-system-setup.sh  install-system-permissions.sh
src/: main.cpp
src/app/: App.cpp  AppContext.cpp  BluetoothStartupConnector.cpp  Configuration.cpp  Logger.cpp  SystemStatusService.cpp
src/bluetooth/: BluetoothCtlManager.cpp  BluezDbusMediaController.cpp
src/cli/: Cli.cpp  InteractiveMenu.cpp  SystemStatusPresenter.cpp
src/mpd/: MpdClient.cpp
src/source/: PlaybackSourceMonitor.cpp  SourceManager.cpp
src/system/: HardwareStubs.cpp  LinuxAudioOutputController.cpp  ProcessRunner.cpp
tests/integration/: IntegrationMain.cpp
tests/unit/: ProcessFixture.cpp  TestMain.cpp
